<resources>
    <string name="app_name">HeroApp</string>
    <string name="running">Running...</string>
    <string name="no_internet">No internet</string>
    <string name="items">Items</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="made_by_franko_bozic">Made by Franko Bozic</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="really_exit_the_application">Really exit the application?</string>
    <string name="cancel">Cancel</string>
    <string name="gender">Gender</string>
    <string name="name">Name</string>
    <string name="intelligence">Intelligence:</string>
    <string name="strength">Strength:</string>
    <string name="speed">Speed:</string>
    <string name="durability">Durability:</string>
    <string name="power">Power:</string>
    <string name="combat">Combat:</string>
</resources>